# synergize-mcp

./: .gitignore  README.md  pyproject.toml
src/synergize_mcp/: __init__.py  client.py  server.py
